# image-process

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.py  pyproject.toml  tasks.py
app/: app.py  args.py  upscale.py
scripts/: build  clean
src/: ArgsParser.cpp  ArgsParser.hpp  Colors.cpp  Colors.hpp  Filters.cpp  Filters.hpp  Image.cpp  Image.hpp  ImageParser.cpp  ImageParser.hpp  RGB.cpp  RGB.hpp  Timer.cpp  Timer.hpp  filters.cpp  filters.hpp  main.cpp  ppm.cpp  ppm.hpp
